--- a/inst/doc/seewave_IO.rnw
+++ b/inst/doc/seewave_IO.rnw
@@ -56,7 +56,7 @@ The main functions of \texttt{seewave (>1.5.0)} can use different classes of obj
 \subsection{Non specific classes}
 \subsubsection{Vector}
 Any muneric vector can be treated as a sound if a sampling frequency is provided in the \texttt{f} argument of \seewave ~functions. For instance, a 440 Hz sine sound (A note) sampled at 8000 Hz during one second can be generated and plot following:
-<<fig=FALSE>>=
+<<s1, fig=FALSE>>=
 s1<-sin(2*pi*440*seq(0,1,length.out=8000))
 is.vector(s1)
 mode(s1)
@@ -66,14 +66,14 @@ oscillo(s1,f=8000)
 
 \subsubsection{Matrix}
 Any single column matrix can be read but the sampling frequency has to be specified in the \seewave~functions. 
-<<fig=FALSE>>=
+<<s2, fig=FALSE>>=
 s2<-as.matrix(s1)
 is.matrix(s2)
 dim(s2)
 oscillo(s2,f=8000)
 @
 If the matrix has more than one column, then the first column only will be considered.
-<<fig=FALSE>>=
+<<s3, fig=FALSE>>=
 x<-rnorm(8000)
 s3<-cbind(s2,x)
 is.matrix(s3)
@@ -84,28 +84,28 @@ oscillo(s3,f=8000)
 
 \subsection{Time series}
 The class \texttt{ts} and the related functions \texttt{ts}, \texttt{as.ts}, \texttt{is.ts} can be used also for sound. Here follows the command to similarly generate a time series corresponding to a 440 Hz sine sound sampled at 8000 Hz during one second:
-<<>>=
+<<s4a>>=
 s4<-ts(data=s1, start=0, frequency=8000)
 str(s4)
 @
 To generate a 0.5 second random noise:
-<<>>=
+<<s4b>>=
 s4<-ts(data=runif(4000), start=0, end=0.5, frequency=8000)
 str(s4)
 @
 The length of \texttt{s4} is not 4000 but 4001. Data are actually recycled, \texttt{s4[4001]} being the same as \texttt{s4[1]}.  \par
 The functions \texttt{frequency} and or \texttt{deltat} return the sampling frequency ($f$) and the time resolution ($\Delta t$) respectively:
-<<>>=
+<<s4c>>=
 frequency(s4)
 deltat(s4)
 @
 As the frequency is embedded in \texttt{ts} objects, there is no need to specify it when using \seewave~functions:
-<<fig=FALSE>>=
+<<s4d, fig=FALSE>>=
 oscillo(s4)
 @
 
 In the case of multiple time series, \seewave~functions will consider the first series only:
-<<fig=FALSE>>=
+<<s5, fig=FALSE>>=
 s5<-ts(data=s3,f=8000)
 class(s5)
 oscillo(s5)
@@ -113,29 +113,29 @@ oscillo(s5)
 
 
 \subsection{Specific sound classes}
-There are two object classes corresponding to the binary \texttt{wav} format: (\emph{i}) the class \texttt{Wave} of the package \tuneR, (\emph{ii}) the class \texttt{Sample} of the package \sound. There is currently no other way to import sound files. In particular, there is no function to read \texttt{.mp3} or \texttt{.aiff} files.
+There are three object classes corresponding to the binary \texttt{wav} format: (\emph{i}) the class \texttt{Wave} of the package \tuneR, (\emph{ii}) the class \texttt{Sample} of the package \sound, and \emph{iii} the class \texttt{audioSample} of the package \audio. There is currently no other way to import sound files. In particular, there is no function to read \texttt{.mp3} or \texttt{.aiff} files.
 
 \subsubsection{Wave class (package tuneR)}
 The class \texttt{Wave} comes with the package \tuneR managed by Uwe Ligges.
 This S4 class includes different slots with the data (left or right channel), the sampling frequency (or rate), the number of bits (8 \slash 16 \slash 24 \slash 32) and the type of sound (mono \slash stereo). High sampled sound (\emph{i.e.} > 44100 Hz) can be read. \par
 The function to import \texttt{.wav} files from the hard-disk is \texttt{readWave}:
-<<echo=false,quiet=true>>=
-mysong<-synth(d=60,f=8000,cf=1000,Sample=TRUE)
+<<readWave, echo=false,quiet=true>>=
+library(tuneR)
+mysong<-synth(d=60,f=8000,cf=1000,output="Wave")
 savewav(mysong)
 @
 
-<<>>=
-library(tuneR)
+<<s6>>=
 s6<-readWave("mysong.wav")
 s6
 @
 The other advantage of using \texttt{readWave} is for reading part of long files. It is indeed possible to import only a section of the \texttt{.wav} file using the arguments \texttt{from} and \texttt{to} and by specifying the time units with the arguments \texttt{units}. The units can be turned to "samples", "minutes" or "hours". For instance, to read only the section starting at 1s and ending at 5s of the file "mysong.wav" :
-<<>>=
+<<s7a>>=
 s7<-readWave("mysong.wav", from = 1, to = 5, units = "seconds")
 s7
 @
 To get information regarding the object (sampling frequency, number of bits, mono \slash stereo), it is necessary to use the indexing of S4 object classes:
-<<>>=
+<<s7b>>=
 s7@samp.rate
 s7@bit
 s7@stereo
@@ -148,12 +148,18 @@ range(s7@left)
 \subsubsection{Sample class (package sound)}
 The class \texttt{Sample} and the related \texttt{as.Sample} and \texttt{is.Sample} functions belong to the package \sound written by Matthias Heymann. Like \texttt{Wave}, the \texttt{Sample} class is a list containing information regarding data, sampling frequency, bits and the type of sound (mono\slash stereo).\par
 To read a \texttt{.wav} file stored on the hard-disk using \texttt{loadSample}:
-<<>>=
+
+<<echo=false,quiet=true>>=
+detach(package: tuneR)
+library(sound)
+@
+
+<<s8a>>=
 s8<-loadSample("mysong.wav")
 s8
 @
-All kinds of wav files are supported: mono, stereo, 8 or 16 bits per sample, at any sampling frequency above 1000 Hz. The duration and the sampling frequency of a \texttt{Sample} object can be obtained using dedicated functions or list indexing:
-<<>>=
+All kinds of .wav files are supported: mono, stereo, 8 or 16 bits per sample, at any sampling frequency above 1000 Hz. The duration and the sampling frequency of a \texttt{Sample} object can be obtained using dedicated functions or list indexing:
+<<s8b>>=
 rate(s8)
 s8$rate
 duration(s8)
@@ -164,13 +170,14 @@ Unlike \texttt{readWave}, \texttt{loadSample} changes the limits of the sound be
 range(s8$sound[1,])
 @ 
 
-\seewave~functions which return a value describing a sound have a special argument named \texttt{Sample}. When this argument is set to \texttt{TRUE}, the object returned by the function is of class \texttt{Sample} and not \texttt{matrix}. This can be useful for latter analyses as there is no more need to specify the sampling frequency \texttt{f}.
-<<>>=
-s9<-repw(s2,f=8000,times=2,Sample=TRUE)
-oscillo(s9)
+\seewave~functions which return a value describing a sound have a special argument named \texttt{output} that can be set to \texttt{"matrix"}, \texttt{"Sample"}, \texttt{"audioSample"}, \texttt{"Wave"} or \texttt{"ts"}. This allows to control the class of the returned object.
+
+<<s9>>=
+s9<-repw(s2,f=8000,times=2,output="Sample")
+s9
 @
 
-However, matrix objects are easier to handle and can be used with functions not dedicated to sound. It might be then better to let the argument \texttt{Sample} set to \texttt{FALSE} and to store the sampling frequency \texttt{f} in an object:
+However, matrix objects are easier to handle and can be used with functions not dedicated to sound. It might be then better to let the arguments \texttt{Sample} and \texttt{Wave} set to \texttt{FALSE} and to store the sampling frequency \texttt{f} in an object:
 <<>>=
 f<-8000
 oscillo(s2,f)
@@ -179,10 +186,10 @@ oscillo(s2,f)
 \subsubsection{audioSample class (package audio)}
 The package \audio, developed by Simon Urbanek, is another option to handle \texttt{.wav} files. Sound can be imported using the function \texttt{load.wave}. The class of the resulting object is \texttt{audioSample} which is essentially a numeric vector (for mono) or numeric matrix with two rows (for stereo). The sampling frequency and the resolution can be called as attributes :
 <<echo=false,quiet=true>>=
-detach(package: tuneR)
-@
-<<>>=
+detach(package: sound)
 library(audio)
+@
+<<s10>>=
 s10<-load.wave("mysong.wav")
 head(s10)
 s10$rate
@@ -190,7 +197,7 @@ s10$bits
 @ 
 
 The main advantage of the package \audio~is that sound can be directly acquired within an \texttt{R} session. This is achieved by first preparing a vector of \texttt{NA} and then using the function \texttt{record}. For instance, to get a mono sound of 5 seconds sampled at 16 kHz :
-<<eval=FALSE>>=
+<<s11, eval=FALSE>>=
 s11 <- rep(NA_real_, 16000*5)
 record(s11, 16000, 1)
 @ 
@@ -198,6 +205,7 @@ A recording session can be controled using three complementary functions : \text
 
 <<echo=false,quiet=true>>=
 detach(package: audio)
+library(tuneR)
 @
 
 
@@ -207,18 +215,18 @@ detach(package: audio)
 \section{Out}
 \subsection{.txt format}
 For a maximal compatibility with other sound softwares, it can be useful to save a sound as a simple \texttt{.txt} file. This can be done using the function \texttt{export} with the argument \texttt{header=FALSE}. By default, the name of the object is used to name the \texttt{.txt} file. The following commands will write a file "tico.txt" on the hard-disk. \par
-<<>>=
+<<exporta>>=
 data(tico)
 export(tico, f=22050, header=FALSE)
 @
 
 For Windows users, the software \href{http://www.goldwave.com/}{Goldwave~\copyright} can be helpful when handling long sound files or large number of files. To export a sound as a \texttt{.txt} file that can be directly read by \href{http://www.goldwave.com/}{Goldwave~\copyright}, the same function can be used but with the default argument \texttt{header=TRUE}. \seewave will automatically add the header needed. Hereafter the name of the exported file is changed using the argument \texttt{filename}: \par
-<<>>=
+<<exportb>>=
 export(tico, f=22050, filename="tico_Gold.txt")
 @
 
 Any header can be specified for a connection with other softwares. For instance, if an external software needs the header "f=sampling frequency; ch=left":
-<<>>=
+<<exportc>>=
 export(tico, f=22050, filename="tico_ext.txt",
 header="f=22050; ch=left")
 @
@@ -226,13 +234,13 @@ header="f=22050; ch=left")
 
 \subsection{.wav format}
 \tuneR, \sound and \audio have each funcion to write \texttt{.wav} files: \texttt{writeWave}, \texttt{saveSample}, and \texttt{save.wave} respectively.  Within \seewave The function \texttt{savewav}, which is based on \texttt{saveSample}, can be used to save data as \texttt{.wav}. By default, the name of the object will be used for the name of the \texttt{.wav} file:
-<<>>=
+<<savewave>>=
 savewav(tico, f=22050)
 @
 
 As seen before, if the object to be saved is of class \texttt{ts}, \texttt{Sample} or \texttt{Wave}, there is no need to specify the argument \texttt{f}. Here we use the argument \texttt{filename} to change the name of the \texttt{wav} file:
-<<>>=
-ticofirst<-cutw(tico,f=22050, to=0.5, Sample=TRUE)
+<<savewavb>>=
+ticofirst<-cutw(tico,f=22050, to=0.5, output="Wave")
 savewav(ticofirst, filename = "tico_firstnote.wav")
 @
 
@@ -252,22 +260,18 @@ To compress a \texttt{.wav} file into \texttt{.flac}, the argument \texttt{rever
 %% MONO AND STEREO
 %%%%%%%%%%%%%%%%%
 \section{Mono and stereo}
-Both \texttt{Wave} and \texttt{Sample} classes can handle stereo files. There are some specific functions regarding mono\slash stereo type. Both libraries include functions with the same name. To avoid a conflict between functions, one of the two  has to be detached:
-<<>>=
-detach(package: seewave)
-library(tuneR)
-@
+Both \texttt{Sample} and \texttt{Wave} classes can handle stereo files. There are some specific functions regarding mono\slash stereo type. Both libraries include functions with the same name.
  
 \subsection{Wave class}
 To generate a stereo sound, two mono sounds are first created using \texttt{sine}, a function that returns a \texttt{Wave} object, and then combined using \texttt{stereo}:
-<<>>=
+<<s12>>=
 left<-sine(440, bit = 16)
 right<-sine(2000, bit = 16)
 s12<-stereo(left,right)
 s12
 @
 To go back to a mono file taking the left channel only:
-<<>>=
+<<s13>>=
 s13<-mono(s12,"left")
 @
 The function \texttt{channel} do roughly the same as it extracts one or more channels. To get this time the right channel:
@@ -275,7 +279,7 @@ The function \texttt{channel} do roughly the same as it extracts one or more cha
 s14<-channel(s12,"right")
 @
 And eventually, the S4 indexing can be used to do it "manually". In this particular case, the returned object will be of class \texttt{vector}.
-<<>>=
+<<s14>>=
 s13<-s12@left
 is.vector(s13)
 s14<-s12@right
@@ -285,13 +289,13 @@ is.vector(s14)
 \subsection{Sample class}
 <<echo=false,quiet=true>>=
 detach(package: tuneR)
+library(sound)
 @
 
 With the \texttt{Sample} objects, the syntax is almost similar. To generate stereo sound, the function \texttt{synth} with the argument \texttt{Sample=TRUE} is called twice:
 <<>>=
-library(seewave)
-left<-synth(cf=440,d=5,f=8000,Sample=T)
-right<-synth(cf=2000,d=5,f=8000,Sample=T)
+left<-synth(cf=440,d=5,f=8000,output="Sample")
+right<-synth(cf=2000,d=5,f=8000,output="Sample")
 s13<-stereo(left,right)
 s13
 @
@@ -341,7 +345,7 @@ and the functions \texttt{WavPlayer}, \texttt{setWavPlayer}, \texttt{getWavPlaye
 
 \subsubsection{audioSample class}
 \label{playaudioSample}
-The package \audio~has similarly a function \texttt{play} but also have three useful functions to control recording and playback  :
+The package \audio~has similarly a function \texttt{play} but also have three useful functions to control recording and playback:
 \begin{itemize}
 \item \texttt{pause} that stops audio recording or playback,
 \item \texttt{rewind} that rewinds audio recording or playback, \textit{i.e.}, makes the beginning of the source (or target) object the current audio position,
