--- a/NEWS
+++ b/NEWS
@@ -3,8 +3,27 @@
 		*****************************************
 
 
-		CHANGES IN SEEWAVE VERSION 1.5.6 [13-November-2009]
+		CHANGES IN SEEWAVE VERSION 1.5.7 [15-March-2010]
 
+NEW FEATURES
+	o localpeaks(): a new function that splits a spectrum in bands and search for the maximum peak of each band.
+	o fbands(): a new function to split a spectrum in a series of bands (a kind of equalizer plot).
+	o fpeaks(): a new function to detect frequency peaks.
+	o octaves(): a new function that returns the frequency octaves of a specific note.
+	o rugo(): a new function to compute the 'rugosity' of a time series.
+
+OTHER CHANGES
+	o ceps(): a small bug in the value return has been fixed.
+
+DEPRECATED & DEFUNCT
+	o ceps(), meanspec(), spec(): the argument 'peaks' no more exists (cf. new function fpeaks()).
+
+OTHER NEWS
+	o seewave has now a dedicated website: http://rug.mnhn.fr/seewave
+	o a discussion group has been opened: http://groups.google.fr/group/seewave
+
+
+		CHANGES IN SEEWAVE VERSION 1.5.6 [13-November-2009]
 
 NEW FEATURES
 	o meandB(): a new function to compute the mean of dB values.
