--- a/inst/doc/seewave_IO.rnw
+++ b/inst/doc/seewave_IO.rnw
@@ -233,14 +233,14 @@ header="f=22050; ch=left")
 
 
 \subsection{.wav format}
-\tuneR, \sound and \audio have each funcion to write \texttt{.wav} files: \texttt{writeWave}, \texttt{saveSample}, and \texttt{save.wave} respectively.  Within \seewave The function \texttt{savewav}, which is based on \texttt{saveSample}, can be used to save data as \texttt{.wav}. By default, the name of the object will be used for the name of the \texttt{.wav} file:
+\tuneR, \sound and \audio have a function to write \texttt{.wav} files: \texttt{writeWave}, \texttt{saveSample}, and \texttt{save.wave} respectively.  Within \seewave, the function \texttt{savewav}, which is based on \texttt{writeWAve}, can be used to save data as \texttt{.wav}. By default, the name of the object will be used for the name of the \texttt{.wav} file:
 <<savewave>>=
 savewav(tico, f=22050)
 @
 
 As seen before, if the object to be saved is of class \texttt{ts}, \texttt{Sample} or \texttt{Wave}, there is no need to specify the argument \texttt{f}. Here we use the argument \texttt{filename} to change the name of the \texttt{wav} file:
 <<savewavb>>=
-ticofirst<-cutw(tico,f=22050, to=0.5, output="Wave")
+ticofirst<-cutw(tico, f=22050, to=0.5, output="Wave")
 savewav(ticofirst, filename = "tico_firstnote.wav")
 @
 
